# quies

./: AGENTS.md  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
crates/quies-cli/: Cargo.toml
crates/quies-cli/src/: main.rs
crates/quies-core/: Cargo.toml
crates/quies-core/src/: coreaudio.rs  lib.rs  profile.rs
docs/: hammerspoon.md
