[workspace]
resolver = "2"
members = [
  "crates/quies-cli",
  "crates/quies-core",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["quies contributors"]

[workspace.dependencies]
anyhow = "1.0"
coreaudio-sys = "0.2"
core-foundation = "0.9"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
